# llmops-lab

./: .agentreg.yml  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  init.py  pyproject.toml  test_api.py
.github/workflows/: ci.yml  dependencies.yml  nightly.yml  pr-checks.yml  regression-report.yml  regression.yml  release.yml
cases/: agent_regression.csv
configs/: default.yaml
docs/: AGENTREG_CI_PRODUCT.md  AGENT_RULES.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_DIAGRAMS.md  CI.md  GITHUB_ACTIONS.md  README_DEV.md  agentreg_onboarding_onepager.md  agentreg_weekly_report_template.md
evals/: report.json  run_eval.py
prompts/: v1.yaml  v2.yaml  v3.yaml
reports/: regression_report.md  regression_report_fixed.md  weekly_test.md
reports/agentreg/: .gitkeep
runs/agentreg/: .gitkeep  20260117.jsonl  20260130.jsonl  20260201.jsonl  20260207.jsonl
runs/logs/: gateway.jsonl
scripts/: ci_gate_s1.py  create_baseline_data.py  create_old_baseline_data.py
src/agentops/: __init__.py  __main__.py  check.py  (+13 more)
tests/: conftest.py  test_agentops.py  test_agentops_evaluator.py  test_agentops_loader.py  test_agentops_runner.py  test_agentreg_config.py  test_cache.py  test_check.py  test_ci_gate_s1.py  test_config.py  test_diff_explain.py  test_e2e_openai.py  test_flakiness.py  test_gateway.py  test_json_validator.py  test_load_cases.py  test_openai_provider.py  test_pricing.py  test_prompt_manager.py  test_rate_limiter.py  test_regression_analysis.py  test_s1_contract_runner.py  test_weekly_report_s1.py
(+11 files in other folders)
