[project]
name = "llmops-lab"
version = "0.1.0"
description = "LLMOps learning and experimentation lab"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
